public/css/stylesheet.css
@import "quill.snow.css";

@font-face { font-family: "Montserrat-Bold"; src: url('../fonts/Montserrat-Bold.otf'); }
@font-face { font-family: "OpenSans-Light"; src: url('../fonts/OpenSans-Light.ttf'); }
@font-face { font-family: "OpenSans-Regular"; src: url('../fonts/OpenSans-Regular.ttf'); }

:root {
    --scroll-thumb-color: #727cf5;
    --scroll-bg-color: #dedede;
}
body {
    font-family: 'OpenSans-Regular', sans-serif;
    background-color: #f1f1f1;
}
header {
    height: 450px;
    position: relative;
    width: 100%;
    overflow:hidden;
}
header:before {
    content: ' ';
    background-image: url(../img/header.jpg);
    background-position: top -20px center;
    position: absolute;
    overflow: hidden;
    height: 470px;
    top: -10px;
    left: -10px;
    right: -10px;
    bottom: -10px;
    z-index: -1;
    padding-top: 125px;
    -webkit-filter: blur(4px) brightness(40%);
}
header .overlay h1 {
    font-family: "Montserrat-Bold", sans-serif;
    padding-top: 170px;
    font-size: 90px;
    line-height:1em;
    color: white;
    text-shadow: 1px 1px 2px #000;
    z-index: 1001;
}
.search-form {
    position: absolute;
}
.search-form .form-control {
    min-width: 300px;
}
.search-form .btn {
    position: absolute;
    right: 0;
}
.navbar {
    transition: all .2s ease-in-out;
    text-shadow: none;
}
.btn-primary {
    background: #727cf5;
    border-color: #727cf5;
    letter-spacing: .025em;
    will-change: transform;
    transition: all .15s ease;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
}
.btn-primary:hover, .btn-primary:active, .btn-primary:focus {
    background: #727cf5;
    border-color: #727cf5;
}
.text-discord {
    color: #87a2ff !important;
}
a.text-discord:hover, a.text-discord:focus, a.text-discord:active {
    color: #7289DA !important;
}
.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
    color: #fff;
    background-color: #727cf5;
    border-color: #727cf5;
}
a:hover {
    text-decoration: none !important;
}
.circle {
    margin: auto;
    width: 100px;
    height: 100px;
    background: #3bafda linear-gradient(135deg,#3bafda 0,#727cf5 70%);
    border-radius: 50%;
    text-align: center;
    border: solid 5px #DDD;
}
.circle i {
    line-height:90px;
}
/*.card-header {
    border-bottom: none;
    background: #3bafda linear-gradient(135deg,#3bafda 0,#727cf5 70%);
    color:#FFF;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
}*/
.bg-gradient {
    background: #3bafda linear-gradient(135deg,#3bafda 0,#727cf5 70%);
}
.navbar-dark .navbar-nav .nav-link {
    color: rgba(255,255,255,.7);
}
.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
    color: rgba(255,255,255,1);
}
.table td, .table th {
    vertical-align: middle !important;
}
@media(max-width:991.98px) {
    .server-banner {
        display: none;
    }
}
.btn-discord {
    background: #7289DA;
    border-color: #7289DA;
}
.btn-discord:hover, .btn-discord:active, .btn-discord:focus {
    background: #7A90DC;
    border-color: #7A90DC;
}
.bold-font {
    font-family: "Montserrat-Bold", sans-serif;
}
.ql-editor { min-height: 150px; }
.ql-editor p {
    margin-bottom: 10px !important;
}
.ql-align-justify {
    text-align: justify;
}

.card-pricing .card-header {
    padding-top: 1.25rem;
    padding-bottom: 1.25rem
}

.card-pricing .list-unstyled li {
    padding: .5rem 0
}

.card-pricing.popular {
    z-index: 1
}

.hover-scale-110:hover,
.scale-110 {
    -webkit-transform: scale(1.1)!important;
    -ms-transform: scale(1.1)!important;
    transform: scale(1.1)!important
}

.card.hover-scale-110:hover {
    z-index: 2;
    border-radius: .375rem!important
}
.card-pricing.scale-110 {
    border-radius: .375rem!important
}
@media (max-width:991.98px) {
    .card-pricing.scale-110 {
        -webkit-transform: scale(1)!important;
        -ms-transform: scale(1)!important;
        transform: scale(1)!important
    }
}
.card-product .card-price,
.card-product .card-title {
    font-size: 1rem;
    font-weight: 600
}
.card-product .card-price {
    display: block
}
.discord-members {
    max-height: 350px;
    overflow-y:scroll;
    overflow-x: hidden;
    line-height: 1.2em;
}
.discord-indicator {
    width:15px;
    height:15px;
    background-color:red;
    border-radius:50%;
    position:absolute;
    bottom:-5px;
    right:-5px;
    border: solid 3px #36393F;
}
.indicator-dnd {
    background-color:red;
}
.indicator-idle {
    background-color:orange;
}
.indicator-online {
    background-color:green;
}
.discord-block .fa-discord {
    color: #fff;
}
.discord-block h5 {
    color: #fff;
    font-weight: bold;
}
.discord-join {
    color:#Fff;
}
.discord-header, .bg-discord  {
    background-color: #7289DA;
    color: white !important;
}
.banner {
    position: relative;
}
.banner .btn {
    position: absolute;
    width:468px;
    height:60px;
    opacity: 0.5;
}
.banner .btn:hover {
    color: white !important;
    background-color: rgba(0,0,0,0.4);
    opacity: 0.8;
}
.banner {
    width:468px;
    height:60px;
}
.progress-overlay {
    position: absolute;
    height:20px;
    line-height:20px;
    text-align:center;
    color:white;
}

.banner-holder {
    width:468px;height:60px;
    background-color:rgba(0,0,0,0.05);
    border:solid 1px rgba(0,0,0,0.1);
    line-height:60px;
}
input.form-control:focus, select.form-control:focus {
    box-shadow: none !important;
}
tr.bg-primary {
    background-color: rgba(94, 114, 228, 0.2) !important;
}
.card-header {
    background-color:rgba(0,0,0,0.03) !important;
}

body {
    font-family: sans-serif;
}
#container {
    background: #DDD;
    max-width: 1400px;
}
.item {
    width: 200px;
    float: left;
}
.item img {
    display: block;
    width: 100%;
}
button {
    font-size: 18px;
}
.container{
    width:100%;
}
:root {
    --scroll-thumb-color: #727cf5;
    --scroll-bg-color: #efefef;
}

.custom-scroll {
    max-height: 450px;
    overflow-y: scroll;
}
.custom-scroll::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 12px;
    background-color: var(--scroll-bg-color);
}
.custom-scroll::-webkit-scrollbar-thumb {
    background-color: var(--scroll-thumb-color);
    background-clip: padding-box;
    border: 3px solid transparent;
    border-radius: 5px;
}
.custom-scroll::-webkit-scrollbar-track-piece {
    background-color: transparent;
    background-clip: padding-box;
    border: 3px solid transparent;
    border-radius: 10px;
}
.stat-icon {
    width:50px;
    height:50px;
    text-align:center;
    line-height:50px;
    margin: auto;
}
#screenshot:hover {
    cursor: pointer;
}
.ql-align-center {
    text-align: center !important;
}

